Fixed top buttons being stacked on narrow screens Fixed padding and layout of About and Help dialogs Fixed bug that would zoom out if About or Help was pressed

--- a/style.css
+++ b/style.css
@@ -63,13 +63,13 @@ body {
 
 #menu-left {
     float: left;
-    width: 33%;
+    width: 20%;
 }
 
 #menu-center {
     display: inline-block;
     margin: 0 auto;
-    width: 34%;
+    width: 60%;
     text-align: center;
 }
 #menu-center a {
@@ -79,7 +79,7 @@ body {
 
 #menu-right {
     float: right;
-    width: 33%;
+    width: 20%;
 }
 #menu-right a {
     float: right;
@@ -88,55 +88,42 @@ body {
 /* Help */
 @font-face {
     font-family: "KomikaSlick";
-    src: url("fonts/komika_slick.ttf") format("truetype");
+    src: url("fonts/KOMIKASK.ttf") format("truetype");
 }
 
 #bubble-container {
     position: absolute;
-    width: 600px;
-    top: 100px;
+    width: 80%;
+    max-width: 600px;
+    top: 84px;
     left: 50%;
     transform: translateX(-50%);
     opacity: 0.9;
+    background: blue;
     z-index: 2;
 }
 
 .bubble {
-    z-index: 2;
-    font-family: "KomikaSlick", Arial, sans-serif;
     position: absolute;
-    width: 600px;
+    font-family: "KomikaSlick", Arial, sans-serif;
+    z-index: 2;
+    width: 100%;
     background: white;
     border-radius: .4em;
-    padding: 20px;
-}
-
-.bubble:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 63%;
-    width: 0;
-    height: 0;
-    border: 33px solid transparent;
-    border-bottom-color: white;
-    border-top: 0;
-    border-left: 0;
-    margin-left: -16.5px;
-    margin-top: -33px;
-}
-#help:after {
-    left: 61%;
-}
-#about:after {
-    left: 39%;
 }
 
 #help {
     display: none;
 }
+#help-inner {
+    padding: 20px;
+}
+
 #about {
     display: none;
+}
+#about-inner {
+    padding: 20px;
 }
 
 /* Page Navigation */
